syntax = "proto3";

option go_package = "gitlab.apk-group.net/siem/backend/asset-discovery/api/pb";


message UserSignUpRequest {
    string firstName = 1 [json_name = "firstName"];
    string lastName = 2 [json_name = "lastName"];
    string password = 4 [json_name = "password"];
    string username = 5 [json_name = "username"];
}

message UserSignUpResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}


message UserSignInRequest {
    string username = 1;
    string password = 2;
}

message UserSignInResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}

message User {
    uint64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string username = 4;
}

message UserSignOutRequest {
    string refreshToken = 1 [json_name = "refreshToken"];
}